   memcmp(), memcpy(), memmove(), memcmp(), memchr(), bzero(), bcopy() and bcmp() have been implemented in 
   PSXSDK's libc. This fixes a lot of problems.
- Fixed GsPrintFont(), the x position was incremented before drawing a character.
   Now it is incremented after drawing a character.
- Now the joysticks/joypads are read using low-level routines instead of using BIOS routines.
   This is more versatile and allows the implementation of things such as vibration.
   On the other hand, this can cause conflicts with the BIOS' memory card handling routines.
   If you don't do directly file manipulation calls on the memory card there should be no problem, however,
   as the PSXSDK functions to read/write the memory card take care of that already.
   The functions added are: QueryPAD(), pad_read_raw(), pad_escape_mode().
- Implemented vibration for DualShock-compatible controllers.
   The functions added are: pad_enable_vibration(), pad_set_vibration()
- The PSXSnake example now vibrates your joystick when you die.
- Fixed calculate_real_padding_hex() in libc.c. This should fix padding with hexadecimal
  numbers in vsnprintf based functions (sprintf() / GsPrintFont() / etc.).
- SetVBlankHandler() and SetRCntHandler() now change handler if they're called after an handler
   has already been set. In 0.1, they did not change handler and kept the old handler.
- bmp2tim now also supports setting magic pink as transparent (like Allegro).
- scalex and scaley in the GsSprite structure now act like PsyQ or Blade Libs when they are
   higher than eight. When they are lower than eight they act like in 0.1.
- Added GsPrintFont() family function which do justifying (GsPrintFontRight() justifies on the right,
  GsPrintFontCenter() justifies at the center).
- Added GsPrintFontScaled() family functions which output a scaled font from the 8x8 font.
- In 0.1 bmp2tim crashed if it didn't find or couldn't read the source bitmap, this is fixed now.